--- a/tox.ini
+++ b/tox.ini
@@ -8,7 +8,7 @@ deps = poetry
 allowlist_externals =
     poetry
 commands =
-    poetry run pytest {posargs:./tests/unit}
+    poetry run pytest  --cov-report=xml --cov-report=html {posargs:./tests/unit}
 
 [testenv:linters]
 description = Basic linting checks
